--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
+    "countries-list": "^3.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
@@ -24,7 +25,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "react-select": "^5.8.0",
+    "react-select": "^5.9.0",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^10.0.5",
     "stripe": "^16.11.0",
